--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /dataSources/
 /dataSources.local.xml
 
+# Hide config files that may contain sensitive information
+# src/main/resources/application.properties
 config.properties
 .github
 
