--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /dataSources.local.xml
 
 # Hide config files that may contain sensitive information
-# src/main/resources/application.properties
+make-every-mile-count/src/main/resources/application.properties
 config.properties
 .github
 
